--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div id="single" ><p ><a  href="./pages/scary/index.html" > Something scary </a>
             </p></div>
       <div id="multiplayer"  ><p  ><a  href="./pages/interesting/index.html" > Something interesting </a> </p></div>
-      <div id="options"><p> <a  href="./pages/mysteriouse/index.html" > Something mysteriouse </a> </p></div>
+      <div id="options"><p> <a  href="./pages/mysteriouse/index.html" > Something mysterious </a> </p></div>
       <div id="credits"><p> <a href="./pages/simple/index.html" > Something hard </a>  </p></div>
       <div id="right"></div>
       
