--- a/pages/mysteriouse/index.html
+++ b/pages/mysteriouse/index.html
@@ -16,6 +16,9 @@
         <div class="glitch-img"></div>
     </div>
     <div class="content-title"></div>
-    <p class="content-text">Advice from writer to writer: You may want too</p>
+    <p class="content-text">Advice from writer to writer: You're doing great! And to keep up with good ideas there is something that might help! Walk you to your room and think of the best moment of your favourite book.
+
+        Then take one step inside your room, and turn around. Raise your hand above your head and... well let's see what you may find
+    </p>
 </div>
 </html>
